# Midi-To-Tablature_Translator

./: .gitignore  Main.hs  MidiParser.hs  NotationFormatter.hs  NotationRuler.hs  NotationWriter.hs  README.md  README.txt  Test.hi  Test.hs  TestText.java  WriteMidiData.java  cabal.sandbox.config  midi-to-tabs.cabal  notes.txt
oldVersion/: GetMidiData.java  MainMidiTranslator.java  TestSoundMidiLib.java  testDrumText.txt  testMidi.java
