name:                midi-to-tabs
version:             0.1.0.0
synopsis:            Translate MIDI drum tracks into tablature format
homepage:            https://github.com/ravzac14/Midi-To-Tablature_Translator
author:              Zack Raver
maintainer:          your_email@example.com
category:            Music, MIDI
build-type:          Simple
cabal-version:       >=1.12

executable midi-to-tabs
  main-is:             Main.hs
  other-modules:       MidiParser, NotationWriter
  build-depends:       base >=4.15 && <5, midi, event-list, mtl
  default-language:    Haskell2010
